jsonschemadsl2ecore.trafo.opt/test/test30/invalidtests/example5.test30
{
	"null":"",
	"number":1.32333,
	"string":"some string",
	"object":{},
	"extra":"extra"
}